<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    tools:context="edu.mobidev.labexambookmarks.ViewBookmarkActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_open"
        android:text="@string/label_open"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="#ff594d"
        android:textColor="#ffffff"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_delete"
        android:text="@string/label_delete"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="#ff594d"
        android:textColor="#ffffff"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_marginRight="5sp"
        android:layout_toLeftOf="@id/button_open"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_link"
        android:layout_below="@id/button_delete"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:textColor="#777777"
        android:id="@+id/tv_link"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_bookmark"
        android:layout_below="@id/tv_link"
        android:text="http://www.google.com"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textColor="#000000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_url"
        android:layout_below="@id/tv_bookmark"
        android:text="http://www.google.com"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="#222222"
        />

</RelativeLayout>
